--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ tbody tr.show { opacity:1; transform:translateY(0); }
     <tbody id="productList"></tbody>
   </table>
 
-  <h2>Orders</h2>
+  <h2>Orders (Last 5)</h2>
   <table>
     <thead>
       <tr>
@@ -94,14 +94,9 @@ tbody tr.show { opacity:1; transform:translateY(0); }
 
 </div>
 
-<!-- Using Firebase v8 CDN (works with firebase.initializeApp style) -->
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-
 <script>
-/* ============================
-   Replace with your config
-   ============================ */
 const firebaseConfig = {
   apiKey: "AIzaSyCl9ENd3XOP1KeutD7s1zSiXYSuz4VIqGU",
   authDomain: "cloud-mart01.firebaseapp.com",
@@ -112,181 +107,13 @@ const firebaseConfig = {
   appId: "1:656495467691:web:b0c0f7356b36af5de12bee",
   measurementId: "G-PXLYR809MM"
 };
-
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 
-/* ============================
-   DOM refs
-   ============================ */
-const prodForm = document.getElementById('productForm');
-const prodName = document.getElementById('prodName');
-const prodCategory = document.getElementById('prodCategory');
-const prodPrice = document.getElementById('prodPrice');
-const prodDescription = document.getElementById('prodDescription');
-const prodImage = document.getElementById('prodImage');
-const addUpdateBtn = document.getElementById('addUpdateBtn');
-const cancelEditBtn = document.getElementById('cancelEditBtn');
-
-const productList = document.getElementById('productList');
+/* DOM refs */
 const orderList = document.getElementById('orderList');
 
-const adminBkashInput = document.getElementById('adminBkash');
-const adminNagadInput = document.getElementById('adminNagad');
-const savePaymentBtn = document.getElementById('savePaymentBtn');
-const reloadPaymentBtn = document.getElementById('reloadPaymentBtn');
-
-/* ============================
-   State
-   ============================ */
-let editingKey = null; // যদি edit mode হয়, এখানে product key থাকবে
-
-/* ============================
-   Payment: load & save
-   ============================ */
-function loadPayment() {
-  db.ref('payment').once('value').then(snap=>{
-    const d = snap.val() || {};
-    adminBkashInput.value = d.bkash || '';
-    adminNagadInput.value = d.nagad || '';
-  }).catch(err=>{
-    console.error('Load payment err:', err);
-    alert('Payment load failed. Check console.');
-  });
-}
-savePaymentBtn.addEventListener('click', ()=>{
-  const bk = adminBkashInput.value.trim();
-  const ng = adminNagadInput.value.trim();
-  db.ref('payment').update({ bkash: bk, nagad: ng })
-    .then(()=> alert('Payment numbers saved to Firebase.'))
-    .catch(e=> { console.error(e); alert('Save failed.'); });
-});
-reloadPaymentBtn.addEventListener('click', loadPayment);
-// realtime update (optional)
-db.ref('payment').on('value', snap=>{
-  const d = snap.val() || {};
-  // update inputs only if not focused to avoid interrupt
-  if (document.activeElement !== adminBkashInput) adminBkashInput.value = d.bkash || '';
-  if (document.activeElement !== adminNagadInput) adminNagadInput.value = d.nagad || '';
-});
-
-/* ============================
-   Products: add / edit / delete / render
-   ============================ */
-function resetForm() {
-  prodForm.reset();
-  editingKey = null;
-  addUpdateBtn.textContent = 'Add Product';
-  cancelEditBtn.style.display = 'none';
-}
-
-cancelEditBtn.addEventListener('click', resetForm);
-
-prodForm.addEventListener('submit', e=>{
-  e.preventDefault();
-  const name = prodName.value.trim();
-  const category = prodCategory.value.trim();
-  const price = prodPrice.value;
-  const description = prodDescription.value.trim();
-  const file = prodImage.files[0];
-
-  if (!name || !category || !price) {
-    alert('Name, Category and Price are required.');
-    return;
-  }
-
-  if (file) {
-    const reader = new FileReader();
-    reader.onload = function(ev) {
-      const imageData = ev.target.result; // base64 dataURL
-      submitProduct({ name, category, price, description, image: imageData });
-    };
-    reader.readAsDataURL(file);
-  } else {
-    // if editing and no new image provided, preserve old image (fetch it)
-    if (editingKey) {
-      db.ref('products/' + editingKey).once('value').then(snap=>{
-        const existing = snap.val() || {};
-        submitProduct({ name, category, price, description, image: existing.image || '' });
-      });
-    } else {
-      submitProduct({ name, category, price, description, image: '' });
-    }
-  }
-});
-
-function submitProduct(productObj) {
-  if (editingKey) {
-    // update
-    db.ref('products/' + editingKey).update(productObj)
-      .then(()=> {
-        alert('Product updated');
-        resetForm();
-      })
-      .catch(e=> { console.error(e); alert('Update failed'); });
-  } else {
-    // push new
-    db.ref('products').push(productObj)
-      .then(()=> {
-        alert('Product added');
-        resetForm();
-      })
-      .catch(e=> { console.error(e); alert('Add failed'); });
-  }
-}
-
-/* listen products realtime and render */
-db.ref('products').on('value', snapshot=>{
-  productList.innerHTML = '';
-  let i = 0;
-  snapshot.forEach(child=>{
-    const p = child.val();
-    const key = child.key;
-    const tr = document.createElement('tr');
-    tr.className = 'show';
-    tr.innerHTML = `
-      <td>${escapeHtml(p.name)}</td>
-      <td>${escapeHtml(p.category)}</td>
-      <td>$${escapeHtml(p.price)}</td>
-      <td style="max-width:260px;word-wrap:break-word;text-align:left;padding-left:10px;">${escapeHtml(p.description)}</td>
-      <td>${p.image?('<img class="thumb" src="'+p.image+'">'):'<span class="small">No image</span>'}</td>
-      <td>
-        <button class="edit small" onclick="startEdit('${key.replace(/'/g,"\\'")}')">Edit</button>
-        <button class="delete small" onclick="deleteProduct('${key.replace(/'/g,"\\'")}')">Delete</button>
-      </td>
-    `;
-    productList.appendChild(tr);
-    setTimeout(()=> tr.classList.add('show'), 40 * i);
-    i++;
-  });
-});
-
-/* start editing a product */
-window.startEdit = function(key) {
-  db.ref('products/' + key).once('value').then(snap=>{
-    const p = snap.val();
-    if (!p) return alert('Product not found.');
-    prodName.value = p.name || '';
-    prodCategory.value = p.category || '';
-    prodPrice.value = p.price || '';
-    prodDescription.value = p.description || '';
-    // image input can't be set programmatically for security; inform user:
-    alert('Product loaded into form. If you want to replace image, choose a new file; otherwise existing image will be preserved on update.');
-    editingKey = key;
-    addUpdateBtn.textContent = 'Update Product';
-    cancelEditBtn.style.display = 'inline-block';
-  }).catch(e=> { console.error(e); alert('Cannot load product for edit.'); });
-};
-
-/* delete product */
-window.deleteProduct = function(key) {
-  if (!confirm('Are you sure you want to delete this product?')) return;
-  db.ref('products/' + key).remove()
-    .then(()=> { /* removed */ })
-    .catch(e=> { console.error(e); alert('Delete failed'); });
-};
-
-/* escape HTML helper to avoid simple injection in table */
+/* escape helper */
 function escapeHtml(text) {
   if (text === undefined || text === null) return '';
   return String(text)
@@ -297,15 +124,34 @@ function escapeHtml(text) {
     .replace(/'/g, '&#39;');
 }
 
-/* ============================
-   Orders: realtime render & done (delete)
-   ============================ */
+/* =======================
+   Orders: last 5 + auto remove older
+   ======================= */
 db.ref('orders').on('value', snap=>{
-  orderList.innerHTML = '';
-  let i = 0;
+  const orders = [];
   snap.forEach(child=>{
-    const o = child.val();
-    const key = child.key;
+    orders.push({ key: child.key, ...child.val() });
+  });
+
+  // sort by date or push order
+  orders.sort((a,b)=>{
+    // assuming 'date' is string; else fallback to push order
+    if(a.date && b.date) return new Date(a.date) - new Date(b.date);
+    return 0;
+  });
+
+  // auto remove older orders if more than 5
+  if (orders.length > 5) {
+    const toRemove = orders.slice(0, orders.length - 5);
+    toRemove.forEach(o=>{
+      db.ref('orders/' + o.key).remove().catch(console.error);
+    });
+    orders.splice(0, orders.length - 5); // keep last 5
+  }
+
+  // render last 5
+  orderList.innerHTML = '';
+  orders.forEach((o,i)=>{
     const tr = document.createElement('tr');
     tr.className = 'show';
     tr.innerHTML = `
@@ -318,69 +164,47 @@ db.ref('orders').on('value', snap=>{
       <td>${escapeHtml(o.trnx||'')}</td>
       <td>${escapeHtml(o.date||'')}</td>
       <td>
-        <button class="done small" onclick="markDone('${key.replace(/'/g,"\\'")}')">Done</button>
-        <button class="print small" onclick="printInvoice('${key.replace(/'/g,"\\'")}')">Print</button>
+        <button class="done small" onclick="markDone('${o.key.replace(/'/g,"\\'")}')">Done</button>
+        <button class="print small" onclick="printInvoice('${o.key.replace(/'/g,"\\'")}')">Print</button>
       </td>
     `;
     orderList.appendChild(tr);
-    setTimeout(()=> tr.classList.add('show'), 40 * i);
-    i++;
+    setTimeout(()=> tr.classList.add('show'), 40*i);
   });
 });
 
+/* mark done */
 window.markDone = function(orderKey) {
   if (!confirm('Mark this order as done (will remove from DB)?')) return;
   db.ref('orders/' + orderKey).remove().catch(e=>{ console.error(e); alert('Failed to remove order.'); });
 };
 
-/* print invoice for order key */
+/* print invoice */
 window.printInvoice = function(orderKey) {
   db.ref('orders/' + orderKey).once('value').then(snap=>{
     const o = snap.val();
-    if (!o) return alert('Order not found');
-    openPrintWindow(o);
+    if(!o) return alert('Order not found');
+    const w = window.open('', '', 'width=800,height=600');
+    w.document.write(`
+      <html><head><title>Admin Invoice</title>
+      <style>body{font-family:Arial;padding:20px} h2{text-align:center} p{margin:6px 0}</style>
+      </head><body>
+      <h2>Cloud Mart Invoice</h2>
+      <p><b>Date:</b> ${escapeHtml(o.date||'')}</p>
+      <p><b>Name:</b> ${escapeHtml(o.name||'')}</p>
+      <p><b>Email:</b> ${escapeHtml(o.email||'')}</p>
+      <p><b>Phone:</b> ${escapeHtml(o.phone||'')}</p>
+      <p><b>Product:</b> ${escapeHtml(o.product||'')}</p>
+      <p><b>Payment:</b> ${escapeHtml(o.payment||'')}</p>
+      <p><b>Send Number:</b> ${escapeHtml(o.sendNumber||'')}</p>
+      <p><b>Transaction ID:</b> ${escapeHtml(o.trnx||'')}</p>
+      <hr><p style="text-align:center">✅ Thank you for your purchase!</p>
+      </body></html>
+    `);
+    w.document.close();
+    w.print();
   }).catch(e=>{ console.error(e); alert('Failed to load order'); });
 };
-
-function openPrintWindow(order) {
-  const w = window.open('', '', 'width=800,height=600');
-  const html = `
-    <html><head><title>Admin Invoice</title>
-    <style>body{font-family:Arial;padding:20px} h2{text-align:center} p{margin:6px 0}</style>
-    </head><body>
-    <h2>Cloud Mart Invoice</h2>
-    <p><b>Date:</b> ${escapeHtml(order.date || '')}</p>
-    <p><b>Name:</b> ${escapeHtml(order.name || '')}</p>
-    <p><b>Email:</b> ${escapeHtml(order.email || '')}</p>
-    <p><b>Phone:</b> ${escapeHtml(order.phone || '')}</p>
-    <p><b>Product:</b> ${escapeHtml(order.product || '')}</p>
-    <p><b>Payment:</b> ${escapeHtml(order.payment || '')}</p>
-    <p><b>Send Number:</b> ${escapeHtml(order.sendNumber || '')}</p>
-    <p><b>Transaction ID:</b> ${escapeHtml(order.trnx || '')}</p>
-    <hr><p style="text-align:center">✅ Thank you for your purchase!</p>
-    </body></html>`;
-  w.document.write(html);
-  w.document.close();
-  w.print();
-}
-
-/* ============================
-   Init: load payment & initial render (listeners already set)
-   ============================ */
-loadPayment();
-
-/* ============================
-   Helpful: Clear form on page refresh (so edit state not persisted accidentally)
-   ============================ */
-window.addEventListener('beforeunload', ()=> {
-  // optional: reset editing key
-  // not necessary, but keep clean
-});
-
-/* ============================
-   End
-   ============================ */
 </script>
 </body>
 </html>
-
