--- a/index.html
+++ b/index.html
@@ -4,28 +4,52 @@
 <meta charset="UTF-8">
 <title>Cloud Mart - Admin (Firebase)</title>
 <style>
-/* --- আপনার আগের স্টাইল বজায় রাখা হলো --- */
+/* --- Responsive & modern touch --- */
 body { font-family: Arial, sans-serif; background:#f4f4f4; margin:0; padding:0; }
-header { background:#333; color:#fff; padding:15px; text-align:center; font-size:22px; }
-.container { padding:20px; }
-h2 { margin-top:30px; }
-input, select, button, textarea { padding:8px; margin:5px 0; border:1px solid #ccc; border-radius:5px; width:100%; box-sizing:border-box; }
-table { width:100%; border-collapse:collapse; border-spacing:0; margin-top:15px; }
-th, td { border:1px solid #ddd; padding:12px 10px; text-align:center; vertical-align: middle; }
+header { background:#333; color:#fff; padding:15px; text-align:center; font-size:2vw; min-font-size:18px; }
+.container { padding:20px; max-width:1200px; margin:auto; box-sizing:border-box; }
+
+h2 { margin-top:30px; font-size:1.5em; }
+
+input, select, button, textarea { padding:10px; margin:5px 0; border:1px solid #ccc; border-radius:5px; width:100%; box-sizing:border-box; font-size:1em; }
+table { width:100%; border-collapse:collapse; border-spacing:0; margin-top:15px; font-size:0.9em; }
+th, td { border:1px solid #ddd; padding:10px; text-align:center; vertical-align: middle; }
 th { background:#555; color:#fff; font-weight:600; }
-button { cursor:pointer; transition:0.3s; }
+
+button { cursor:pointer; transition:0.3s; font-size:0.9em; }
 button:hover { transform:scale(1.05); }
-.delete { background:#dc3545; color:#fff; border:none; padding:5px 10px; }
-.done { background:#28a745; color:#fff; border:none; padding:5px 10px; }
-.print { background:#007bff; color:#fff; border:none; padding:5px 10px; }
-.edit { background:#ffc107; color:#111; border:none; padding:5px 10px; }
-.form-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:10px; align-items:start; }
+
+.delete { background:#dc3545; color:#fff; border:none; padding:6px 10px; }
+.done { background:#28a745; color:#fff; border:none; padding:6px 10px; }
+.print { background:#007bff; color:#fff; border:none; padding:6px 10px; }
+.edit { background:#ffc107; color:#111; border:none; padding:6px 10px; }
+
+.form-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(180px,1fr)); gap:10px; align-items:start; }
+
 img.thumb { width:50px; height:50px; object-fit:cover; border-radius:6px; }
+
 .notice { font-size:13px; color:#444; margin-top:6px; }
+
 tbody tr { opacity:0; transform:translateY(10px); transition:0.4s ease; }
 tbody tr.show { opacity:1; transform:translateY(0); }
+
 .small { font-size:13px; padding:6px 8px; }
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+  header { font-size:4vw; }
+  input, select, button, textarea { font-size:0.9em; }
+  table, th, td { font-size:0.8em; }
+  .form-grid { grid-template-columns:1fr; }
+}
+@media (max-width: 480px) {
+  header { font-size:5vw; }
+  table, th, td { font-size:0.75em; padding:6px; }
+  .thumb { width:40px; height:40px; }
+  .done, .delete, .edit, .print { padding:4px 6px; font-size:0.7em; }
+}
 </style>
+
 </head>
 <body>
 <header>Cloud Mart - Admin Panel (Firebase)</header>
@@ -394,4 +418,3 @@ window.addEventListener('beforeunload', ()=> {
 </script>
 </body>
 </html>
-
